--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,47 @@
 .calcDiv {
-  width: 30%;
-  margin: 120px auto;
+  width: 50%;
   font-size: 20px;
 }
+
+.calcContainer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+
+.container {
+  padding: 10px;
+}
+
+.container h3{
+  padding: 50px;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(230, 176, 138);
+  padding: 10px;
+  margin-bottom: 30px;
+}
+
+.navbar ul {
+  list-style: none;
+  display: flex;
+}
+
+.navbar ul > li {
+  padding: 5px 10px;
+  font-size: 19px;
+  border-right: 1px solid black;
+}
+
+.navbar ul > li:last-child {
+  border-right: none;
+}
+
+.navbar a {
+  color: #25649e;
+}
+
